--- a/resource_allocation_app/templates/resource_allocation_app/resource_allocation_introduction.html
+++ b/resource_allocation_app/templates/resource_allocation_app/resource_allocation_introduction.html
@@ -10,7 +10,7 @@
 {% block content %}
 <div class="container-fluid">
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Resource Allocation Optimization</h1>
+        <h1>Resource Allocation Optimization</h1>
     </div>
 
     <p>
@@ -25,7 +25,7 @@
     </figure>
     <hr class="my-4">
 
-    <h3>Core Problem Areas</h3>
+    <h2>Core Problem Areas</h2>
     <p>이 범주에서는 다음과 같은 대표적인 자원 할당 문제들을 다룹니다.</p>
 
     <div class="row mt-4">
